--- a/test.yaml
+++ b/test.yaml
@@ -1,5 +1,5 @@
 esphome:
-  name: seti
+  name: test
   # includes:
   #   - custom_sensor
 
@@ -36,12 +36,12 @@ pcf8574:
   - id: "pcf8574_hub"
     address: 0x27
     pcf8575: false
-# sensor:
-#   - platform: custom
-#     lambda: |-
-#       auto my_sensor = new MyCustomSensor();
-#       App.register_component(my_sensor);
-#       return {my_sensor};
+sensor:
+  - platform: custom
+    lambda: |-
+      auto my_sensor = new MyCustomSensor();
+      App.register_component(my_sensor);
+      return {my_sensor};
 
-#     sensors:
-#       name: "My Custom Sensor"
+    sensors:
+      name: "My Custom Sensor"
