--- a/seti.yaml
+++ b/seti.yaml
@@ -1,10 +1,11 @@
 esphome:
-  name: test
+  name: seti
   includes:
     - custom_sensor
 
 esp32:
   board: esp-wrover-kit
+
 
 ethernet:
   type: LAN8720
@@ -20,6 +21,7 @@ ethernet:
     subnet: 255.255.255.0
 # Enable logging
 logger:
+  level: VERY_VERBOSE
 
 # Enable Home Assistant API
 api:
@@ -28,20 +30,20 @@ api:
 
 ota:
   password: "e2a376c8782fd57c126375678261db77"
-i2c:
-  sda: GPIO2
-  scl: GPIO4
+# i2c:
+#   sda: GPIO2
+#   scl: GPIO4
 
-pcf8574:
-  - id: "pcf8574_hub"
-    address: 0x27
-    pcf8575: false
+# pcf8574:
+#   - id: "pcf8574_hub"
+#     address: 0x27
+#     pcf8575: false
 sensor:
   - platform: custom
     lambda: |-
       auto my_sensor = new MyCustomSensor();
       App.register_component(my_sensor);
       return {my_sensor};
-
+  
     sensors:
       name: "My Custom Sensor"
